--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 </head>
 <body>
 
-
     <div class="background">
-        <img src="asset1.jpg" id="bg-img">
+        <img src="" id="bg-img">
     </div>
 
     <div class="container">
         <div class="player-img">
-            <img src="asset1.jpg" class="active" id="cover">
+            <img src="" class="active" id="cover">
         </div>
-        
-        <h2 id="music-title">Title</h2>
-        <h3 id="music-artist">Artist</h3>
+
+        <h2 id="music-title"></h2>
+        <h3 id="music-artist"></h3>
 
         <div class="player-progress" id="player-progress">
             <div class="progress" id="progress"></div>
             <div class="music-duration">
-                <span class="current-time">0:00</span>
-                <span class="duration">0:00</span>
+                <span id="current-time">0:00</span>
+                <span id="duration">0:00</span>
             </div>
         </div>
 
         <div class="player-controls">
-            <i class="fa-solid fa-backward" title="Previous"></i>
-            <i class="fa-solid fa-play play-button" title="Play"></i>
-            <i class="fa-solid fa-forward" title="Next"></i>         
+            <i class="fa-solid fa-backward" title="Previous" id="prev"></i>
+            <i class="fa-solid fa-play play-button" title="Play" id="play"></i>
+            <i class="fa-solid fa-forward" title="Next" id="next"></i>
+            <input type="range" id="volume-control" class="custom-range">
         </div>
 
     </div>
